--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-lang-key="pageTitle">Sổ thu chi MoneyBay – Quản lý chi tiêu cá nhân hiệu quả</title>
+    <title data-lang-key="pageTitle">MoneyBay – Quản lý chi tiêu cá nhân hiệu quả</title>
     <meta name="description" content="MoneyBay – Ứng dụng quản lý chi tiêu cá nhân, ghi chép thu chi, báo cáo tài chính, đồng bộ iCloud, xuất CSV. Đơn giản, bảo mật, miễn phí. Tải ngay!">
     <meta name="keywords" content="quản lý chi tiêu, app quản lý chi tiêu, ứng dụng quản lý chi tiêu cá nhân, ghi chép thu chi, quản lý tài chính, MoneyBay, sổ thu chi, quản lý tiền bạc, báo cáo tài chính, app chi tiêu miễn phí">
     <meta name="robots" content="index, follow">
