--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
     <title>Redirecting...</title>
     <script>
       // Fallback nếu meta refresh không hoạt động
-      setTimeout(function() {
-        window.location.href = 'https://moneybay.app';
-      }, 1000);
+      // setTimeout(function() {
+      //   window.location.href = 'https://moneybay.app';
+      // }, 1000);
     </script>
   </head>
   <body>
