--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta http-equiv="refresh" content="0; url=https://moneybay.app" />
@@ -14,4 +14,4 @@
     <h1>Đang chuyển về trang chủ...</h1>
     <p>Nếu bạn không được chuyển hướng, hãy <a href="https://moneybay.app">bấm vào đây</a>.</p>
   </body>
-</html>  -->
+</html> 
