update code Google Analytics

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     <meta name="twitter:title" content="MoneyBay – Ứng dụng quản lý chi tiêu cá nhân hiệu quả">
     <meta name="twitter:description" content="Quản lý chi tiêu cá nhân, ghi chép thu chi, báo cáo tài chính, đồng bộ iCloud, xuất CSV. Đơn giản, bảo mật, miễn phí.">
     <meta name="twitter:image" content="https://moneybay.app/assets/images/banner_moneybay_1200x750.png">
+
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PWZKM6JT9L"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PWZKM6JT9L');
+    </script>
+
     <!-- Structured Data (Schema.org) -->
     <script type="application/ld+json">
     {
