--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   </div>
 </div>
 
-                <a href="#download" class="hidden md:inline-block ml-6 bg-green-500 text-white font-semibold px-5 py-2 rounded-lg hover:bg-green-600 transition-all" data-lang-key="navDownload">
+                <a href="https://apps.apple.com/app/moneybay-expense-manager/id6737480496" class="hidden md:inline-block ml-6 bg-green-500 text-white font-semibold px-5 py-2 rounded-lg hover:bg-green-600 transition-all" data-lang-key="navDownload">
                     Tải ứng dụng
                 </a>
 
@@ -325,11 +325,11 @@
                     <img src="assets/images/apple-logo.png" alt="Apple Logo" class="w-6 h-6 hidden dark:inline">
                     <span data-lang-key="downloadAppStore">Tải từ App Store</span>
                 </a>
-                <a href="#" class="cta-button w-full sm:w-auto flex items-center justify-center gap-3 bg-gray-100 text-slate-800 dark:bg-slate-800 dark:text-white font-semibold px-6 py-4 rounded-lg border border-gray-300 dark:border-slate-700 hover:bg-gray-200 dark:hover:bg-slate-700">
+                <!-- <a href="#" class="cta-button w-full sm:w-auto flex items-center justify-center gap-3 bg-gray-100 text-slate-800 dark:bg-slate-800 dark:text-white font-semibold px-6 py-4 rounded-lg border border-gray-300 dark:border-slate-700 hover:bg-gray-200 dark:hover:bg-slate-700">
                    <img src="assets/images/google-play.png" alt="Google Play Logo" class="w-6 h-6 dark:hidden">
                     <img src="assets/images/google-play.png" alt="Google Play Logo" class="w-6 h-6 hidden dark:inline">
                    <span data-lang-key="downloadGooglePlay">Tải từ Google Play (Soon)</span>
-                </a>
+                </a> -->
             </div>
         </div>
         
@@ -571,10 +571,10 @@
                         <img src="assets/images/apple-logo.png" alt="Apple Logo" class="w-6 h-6 hidden dark:inline">
                         <span data-lang-key="ctaAppStore">Tải từ App Store</span>
                     </a>
-                    <a href="#" class="cta-button w-full sm:w-auto flex items-center justify-center gap-3 bg-gray-100 text-slate-800 dark:bg-slate-800 dark:text-white font-semibold px-6 py-4 rounded-lg border border-gray-300 dark:border-slate-700 hover:bg-gray-200 dark:hover:bg-slate-700">
+                    <!-- <a href="#" class="cta-button w-full sm:w-auto flex items-center justify-center gap-3 bg-gray-100 text-slate-800 dark:bg-slate-800 dark:text-white font-semibold px-6 py-4 rounded-lg border border-gray-300 dark:border-slate-700 hover:bg-gray-200 dark:hover:bg-slate-700">
                         <img src="assets/images/google-play.png" alt="Google Play Logo" class="w-6 h-6">
                         <span data-lang-key="ctaGooglePlay">Tải từ Google Play (Soon)</span>
-                    </a>
+                    </a> -->
                 </div>
             </div>
 </section> 
