--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                         <div class="faq-answer bg-white dark:bg-slate-900 text-slate-600 dark:text-slate-400 px-5 rounded-b-lg">
                              <p data-lang-key="faq5a">Chắc chắn rồi! Để được hỗ trợ thêm, bạn có thể liên hệ với chúng tôi qua email hoặc Facebook:</p>
                              <ul class="list-disc pl-5 mt-2 space-y-1">
-                                <li>Email: <a href="mailto:vutas.studio@gmail.com" class="text-green-500 hover:underline">vutas.studio@gmail.com</a></li>
+                                <li>Email: <a href="mailto:vutaso.com@gmail.com" class="text-green-500 hover:underline">vutaso.com@gmail.com</a></li>
                                 <li>Facebook: <a href="https://www.facebook.com/moneybayapp" target="_blank" class="text-green-500 hover:underline">MoneyBay trên Facebook</a></li>
                             </ul>
                         </div>
@@ -650,7 +650,7 @@
 
             <div class="mb-4">
                 <div class="flex flex-wrap justify-center items-center gap-x-4 gap-y-2 text-sm">
-                     <a href="mailto:vutas.studio@gmail.com" class="hover:text-green-500 dark:hover:text-green-400 transition-colors" data-lang-key="footerEmail">Email</a>
+                     <a href="mailto:vutaso.com@gmail.com" class="hover:text-green-500 dark:hover:text-green-400 transition-colors" data-lang-key="footerEmail">Email</a>
                      <span class="hidden sm:inline">•</span>
                      <a href="https://apps.apple.com/app/moneybay-expense-manager/id6737480496" target="_blank" class="hover:text-green-500 dark:hover:text-green-400 transition-colors">App Store</a>
                      <span class="hidden sm:inline">•</span>
