--- a/privacy/index.html
+++ b/privacy/index.html
@@ -354,8 +354,9 @@
             <h2 data-key="contact-title">Liên hệ với chúng tôi</h2>
             <p data-key="contact-text">Nếu bạn có bất kỳ câu hỏi nào về Chính sách Bảo mật này hoặc muốn thực hiện quyền của mình đối với dữ liệu cá nhân, vui lòng liên hệ với chúng tôi:</p>
             <ul>
-                <li data-key="contact-email">Email: <a href="mailto:vutas.studio@gmail.com">vutas.studio@gmail.com</a></li>
+                <li data-key="contact-email">Email: <a href="mailto:vutaso.com@gmail.com">vutaso.com@gmail.com</a></li>
                 <li data-key="contact-app">Qua ứng dụng MoneyBay: Cài đặt > Hỗ trợ > Liên hệ</li>
+                <li data-key="contact-website">Website: <a href="https://moneybay.app">https://moneybay.app</a></li>
             </ul>
         </div>
     </div>
@@ -445,8 +446,9 @@
                 "policy-changes-text": "Chúng tôi có thể cập nhật Chính sách Bảo mật này theo thời gian. Chúng tôi sẽ thông báo cho bạn về bất kỳ thay đổi nào bằng cách đăng Chính sách Bảo mật mới trên ứng dụng và cập nhật ngày \"cập nhật lần cuối\" ở đầu Chính sách Bảo mật này.",
                 "contact-title": "Liên hệ với chúng tôi",
                 "contact-text": "Nếu bạn có bất kỳ câu hỏi nào về Chính sách Bảo mật này hoặc muốn thực hiện quyền của mình đối với dữ liệu cá nhân, vui lòng liên hệ với chúng tôi:",
-                "contact-email": "Email: <a href=\"mailto:vutas.studio@gmail.com\">vutas.studio@gmail.com</a>",
-                "contact-app": "Qua ứng dụng MoneyBay: Nhiều hơn > Trợ giúp > Liên hệ trợ giúp"
+                "contact-email": "Email: <a href=\"mailto:vutaso.com@gmail.com\">vutaso.com@gmail.com</a>",
+                "contact-app": "Qua ứng dụng MoneyBay: Nhiều hơn > Trợ giúp > Liên hệ trợ giúp",
+                "contact-website": "Website: <a href=\"https://moneybay.app\">https://moneybay.app</a>"
             },
             en: {
                 "title": "Privacy Policy - MoneyBay",
@@ -531,8 +533,9 @@
                 "policy-changes-text": "We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on the application and updating the \"last updated\" date at the top of this Privacy Policy.",
                 "contact-title": "Contact Us",
                 "contact-text": "If you have any questions about this Privacy Policy or want to exercise your rights regarding personal data, please contact us:",
-                "contact-email": "Email: <a href=\"mailto:vutas.studio@gmail.com\">vutas.studio@gmail.com</a>",
-                "contact-app": "Through MoneyBay app: More > Help > Contact"
+                "contact-email": "Email: <a href=\"mailto:vutaso.com@gmail.com\">vutaso.com@gmail.com</a>",
+                "contact-app": "Through MoneyBay app: More > Help > Contact",
+                "contact-website": "Website: <a href=\"https://moneybay.app\">https://moneybay.app</a>"
             }
         };
 
