--- a/terms/index.html
+++ b/terms/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Global Styles */
         :root {
-            --primary-color: #c21a6c; /* Navy blue for headers and accents */
+            --primary-color: #5d1337; /* Navy blue for headers and accents */
             --secondary-color: #ffffff; /* White for backgrounds */
             --accent-color: #c21a6c; /* Teal for buttons and highlights */
             --text-color: #333333; /* Dark gray for text */
@@ -414,7 +414,7 @@
             <h2 data-key="contact-title">Liên hệ với chúng tôi</h2>
             <p data-key="contact-text">Nếu bạn có bất kỳ câu hỏi nào về các Điều khoản và Điều kiện này, vui lòng liên hệ với chúng tôi:</p>
             <ul>
-                <li data-key="contact-email">Email: <a href="mailto:vutas.studio@gmail.com">vutas.studio@gmail.com</a></li>
+                <li data-key="contact-email">Email: <a href="mailto:vutaso.com@gmail.com">vutaso.com@gmail.com</a></li>
                 <li data-key="contact-app">Qua ứng dụng MoneyBay: Nhiều hơn > Trợ giúp > Liên hệ trợ giúp</li>
                 <li data-key="contact-website">Website: <a href="https://moneybay.app">https://moneybay.app</a></li>
             </ul>
@@ -503,7 +503,7 @@
                 "changes-acceptance": "Bằng cách tiếp tục truy cập hoặc sử dụng ứng dụng của chúng tôi sau khi các sửa đổi đó có hiệu lực, bạn đồng ý bị ràng buộc bởi các điều khoản đã sửa đổi. Nếu bạn không đồng ý với các điều khoản mới, toàn bộ hoặc một phần, vui lòng ngừng sử dụng ứng dụng và dịch vụ.",
                 "contact-title": "Liên hệ với chúng tôi",
                 "contact-text": "Nếu bạn có bất kỳ câu hỏi nào về các Điều khoản và Điều kiện này, vui lòng liên hệ với chúng tôi:",
-                "contact-email": "Email: <a href=\"mailto:vutas.studio@gmail.com\">vutas.studio@gmail.com</a>",
+                "contact-email": "Email: <a href=\"mailto:vutaso.com@gmail.com\">vutaso.com@gmail.com</a>",
                 "contact-app": "Qua ứng dụng MoneyBay: Cài đặt > Hỗ trợ > Liên hệ",
                 "contact-website": "Website: <a href=\"https://moneybay.app\">https://moneybay.app</a>"
             },
@@ -587,7 +587,7 @@
                 "changes-acceptance": "By continuing to access or use our application after those revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, in whole or in part, please stop using the application and the service.",
                 "contact-title": "Contact Us",
                 "contact-text": "If you have any questions about these Terms and Conditions, please contact us:",
-                "contact-email": "Email: <a href=\"mailto:vutas.studio@gmail.com\">vutas.studio@gmail.com</a>",
+                "contact-email": "Email: <a href=\"mailto:vutaso.com@gmail.com\">vutaso.com@gmail.com</a>",
                 "contact-app": "Through MoneyBay app: More > Help > Contact",
                 "contact-website": "Website: <a href=\"https://moneybay.app\">https://moneybay.app</a>"
             }
