--- a/index copy.html
+++ b/index copy.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://vutaso.com/moneybay/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chuyển hướng - MoneyBay</title>
+    <meta name="robots" content="noindex, nofollow">
+    <title>MoneyBay đã chuyển sang địa chỉ mới</title>
     <link rel="canonical" href="https://vutaso.com/moneybay/">
     <script type="text/javascript">
-        window.location.href = "https://vutaso.com/moneybay/";
+        window.location.replace("https://vutaso.com/moneybay/");
     </script>
 </head>
 <body>
-    <p>Đang chuyển hướng đến <a href="https://vutaso.com/moneybay/">MoneyBay</a>...</p>
-    <noscript>
-        <meta http-equiv="refresh" content="0; url=https://vutaso.com/moneybay/">
-    </noscript>
+    <p>Trang này đã chuyển sang <a href="https://vutaso.com/moneybay/">https://vutaso.com/moneybay/</a></p>
 </body>
 </html>
